// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiteButton should render a script tag with the passed in script function 1`] = `
"
    window.addEventListener("load", function(event) {
      var button = document.getElementById('lite-button-:r0:');
      button.addEventListener('click', function script() {
        return console.log("Hello, world! I'm an arrow function transpiled to a traditional function");
      });
    });
  "
`;

exports[`LiteButton should render a script tag with the passed in script string 1`] = `
"
      window.addEventListener("load", function(event) {
        var button = document.getElementById('lite-button-:r0:');
        button.addEventListener('click', function() {console.log(\`Hello, world! I'm a string function\`)});
      });
    "
`;
